--- a/seminars/sem7.tex
+++ b/seminars/sem7.tex
@@ -240,11 +240,11 @@
 \]
 
 \[
-	\pi_1\left(\frac{(s+2)^2+9s(s+2)^2+ 18s}{(s+2)^2}\right) = \frac{1}{s}.
+	\pi_1\left(\frac{(s+2)^2+9(s+2)+ 18}{(s+2)^2}\right) = \frac{1}{s}.
 \]
 
 \[
-	\pi_1(s) = \frac{(s+2)^2}{s((s+2)^2+9(s+2)^2+ 18)}
+	\pi_1(s) = \frac{(s+2)^2}{s((s+2)^2+9(s+2)+ 18)}
 	= \frac{(s+2)^2}{s(s^2+13s+40)}
 	= \frac{(s+2)^2}{s(s+5)(s+8)}.
 \]
