--- a/seminars/sem9.tex
+++ b/seminars/sem9.tex
@@ -24,191 +24,9 @@
 \[
 	\Lambda =
 	\begin{pmatrix}
-		0    & 0  & 0    \\
-		0.75 & -1 & 0.25 \\
-		0    & 1  & -1
-	\end{pmatrix}
-\]
-
-\[
-	\vec{p}(0) = (0,1,0).
-\]
-
-
-\subsection{Семинар 9}
-
-\subsubsection*{Задача 9.1}
-
-\begin{tikzpicture}[
-		>=Stealth, thick,
-		state/.style = {draw, circle, minimum size=9mm, font=\small},
-		e/.style   = {->, shorten >=2pt, shorten <=2pt},
-		lbl/.style  = {font=\scriptsize, fill=white, inner sep=1pt}
-	]
-
-	% --- вершины ---
-	\node[state] (Q0) at (0,0) {$E_1$};
-	\node[state] (Q1) at (2.5,0) {$E_2$};
-	\node[state] (Q2) at (5,0) {$E_3$};
-
-	% --- рёбра ---
-	\path[e, bend left=12] (Q1) edge node[lbl] {$0.75$} (Q0);
-	\path[e, bend left=12] (Q1) edge node[lbl] {$0.25$} (Q2);
-	\path[e, bend left=12] (Q2) edge node[lbl] {$1$} (Q1);
-
-\end{tikzpicture}
-
-\[
-	\Lambda =
-	\begin{pmatrix}
-		0           & 0  & 0           \\
-		\frac{3}{4} & -1 & \frac{1}{4} \\
-		0           & 1  & -1
-	\end{pmatrix}
-\]
-
-\[
-	\vec{p}(0) = (0,1,0).
-\]
-
-\[
-	\vec{p}'(t) = \vec{p}(t)\Lambda,\quad \vec{p}(t)=(p_1(t),p_2(t),p_3(t)).
-\]
-
-\[
-	\begin{aligned}
-		p_1'(t) & = \tfrac{3}{4}p_2(t),        \\
-		p_2'(t) & = -p_2(t)+p_3(t),            \\
-		p_3'(t) & = \tfrac{1}{4}p_2(t)-p_3(t).
-	\end{aligned}
-\]
-
-Преобразование Лапласа:
-
-\[
-	\mathcal{L}\{\vec p'(t)\}(s)=s \vec \pi(s)-\vec p(0)
-	,\quad
-	\mathcal{L}\{\vec p(t)\}(s)=\vec \pi(s)
-	,\quad
-	s \vec \pi(s)-\vec p(0)=\vec \pi(s)\Lambda.
-\]
-
-\[
-	\pi_1+\pi_2+\pi_3=\frac{1}{s}
-\]
-
-\[
-	\begin{aligned}
-		s \pi_1(s)-0 & = \tfrac{3}{4}\pi_2(s),          \\
-		s \pi_2(s)-1 & = -\pi_2(s)+\pi_3(s),            \\
-		s \pi_3(s)-0 & = \tfrac{1}{4}\pi_2(s)-\pi_3(s).
-	\end{aligned}
-\]
-
-\[
-	\begin{aligned}
-		(s+1)\pi_2(s)-\pi_3(s)              & = 1, \\
-		-\tfrac{1}{4}\pi_2(s)+(s+1)\pi_3(s) & = 0,
-	\end{aligned}
-	\qquad
-	\Rightarrow\qquad
-	\pi_3(s)=\frac{1}{4}\frac{\pi_2(s)}{s+1}.
-\]
-
-\[
-	\Bigl((s+1) - \frac{1}{4}\frac{1}{s+1}\Bigr)\pi_2(s)=1
-	\;\Rightarrow\;
-	\pi_2(s)=\frac{s+1}{(s+1)^2-\tfrac{1}{4}}
-	=\frac{s+1}{(s+\tfrac{1}{2})(s+\tfrac{3}{2})}.
-\]
-
-\[
-	\pi_3(s)=\frac{1}{4}\cdot\frac{1}{(s+\tfrac{1}{2})(s+\tfrac{3}{2})},
-	\qquad
-	\pi_1(s)=\frac{3}{4}\cdot\frac{s+1}{s\,(s+\tfrac{1}{2})(s+\tfrac{3}{2})}.
-\]
-
-Разложения на простые дроби:
-\[
-	\pi_2(s)=\frac{1}{2}\left(\frac{1}{s+\tfrac{1}{2}}+\frac{1}{s+\tfrac{3}{2}}\right),
-	\quad
-	\pi_3(s)=\frac{1}{4}\left(\frac{1}{s+\tfrac{1}{2}}-\frac{1}{s+\tfrac{3}{2}}\right),
-\]
-\[
-	\pi_1(s)=\frac{1}{s}-\frac{3}{4}\cdot\frac{1}{s+\tfrac{1}{2}}-\frac{1}{4}\cdot\frac{1}{s+\tfrac{3}{2}}.
-\]
-
-Обратное преобразование Лапласа:
-\[
-	\mathcal{L}^{-1}\!\left\{\frac{1}{s+a}\right\}=e^{-at},\qquad
-	\mathcal{L}^{-1}\!\left\{\frac{1}{s}\right\}=1.
-\]
-
-\[
-	\begin{aligned}
-		p_1(t) & = 1 - \frac{3}{4}e^{-\tfrac{1}{2}t} - \frac{1}{4}e^{-\tfrac{3}{2}t}, \\
-		p_2(t) & = \frac{1}{2}e^{-\tfrac{1}{2}t} + \frac{1}{2}e^{-\tfrac{3}{2}t},     \\
-		p_3(t) & = \frac{1}{4}e^{-\tfrac{1}{2}t} - \frac{1}{4}e^{-\tfrac{3}{2}t}.
-	\end{aligned}
-\]
-
-\[
-	\vec{p}(t)\xrightarrow [t\to\infty]{}\vec{p}(\infty)=\left(1,\,0,\,0\right).
-\]
-
-Стационарное распределение $\overline r=(r_1,r_2,r_3,\ldots)$
-\[
-	\begin{cases}
-		r_1 = \tfrac{3}{4} r_2,       \\
-		r_2 = - r_2 + r_3,            \\
-		r_3 = \tfrac{1}{4} r_2 - r_3, \\
-		r_1 + r_2 + r_3 = 1.
-	\end{cases}
-	,\quad
-	\begin{cases}
-		\tfrac{3}{4} r_2 - r_1 = 0, \\
-		- r_2 + r_3 = 0,            \\
-		\tfrac{1}{4} r_2 - r_3 = 0, \\
-		r_1 + r_2 + r_3 = 1.
-	\end{cases}
-\]
-
-\[
-	r_2 = 0,\quad r_3=0,\quad r_1=1
-	\;\Rightarrow\;
-	\vec r = (1,0,0).
-\]
-
-
-\subsection{Семинар 9}
-
-\subsubsection*{Задача 9.1}
-
-\begin{tikzpicture}[
-		>=Stealth, thick,
-		state/.style = {draw, circle, minimum size=9mm, font=\small},
-		e/.style   = {->, shorten >=2pt, shorten <=2pt},
-		lbl/.style  = {font=\scriptsize, fill=white, inner sep=1pt}
-	]
-
-	% --- вершины ---
-	\node[state] (Q0) at (0,0) {$E_1$};
-	\node[state] (Q1) at (2.5,0) {$E_2$};
-	\node[state] (Q2) at (5,0) {$E_3$};
-
-	% --- рёбра ---
-	\path[e, bend left=12] (Q1) edge node[lbl] {$0.75$} (Q0);
-	\path[e, bend left=12] (Q1) edge node[lbl] {$0.25$} (Q2);
-	\path[e, bend left=12] (Q2) edge node[lbl] {$1$} (Q1);
-
-\end{tikzpicture}
-
-\[
-	\Lambda =
-	\begin{pmatrix}
-		0 & \tfrac{3}{4} & 0  \\
-		0 & -1           & 1  \\
-		0 & \tfrac{1}{4} & -1
+		0            &    & 0            \\
+		\tfrac{1}{4} & -1 & \tfrac{3}{4} \\
+		0            & 1  & -1
 	\end{pmatrix}
 \]
 
