--- a/main.tex
+++ b/main.tex
@@ -23,6 +23,12 @@
 
 \newcommand{\term}[1]{\textit{#1}\textnormal{}} 
 
+\usepackage{epigraph}
+
+\setlength{\epigraphwidth}{0.6\textwidth} % ширина цитаты
+\setlength{\epigraphrule}{0pt}            % убрать линию над цитатой
+\renewcommand{\epigraphflush}{flushleft}  % выравнивание по левому краю
+
 % Заголовок
 \title{Случайные процессы}
 \date{Сентябрь 2025}
@@ -51,5 +57,7 @@
 \newpage
 \input{exam_problems}
 
+\newpage
+\input{exam_consultation}
 
 \end{document}
