--- a/book/book1.tex
+++ b/book/book1.tex
@@ -52,68 +52,88 @@ $S=\{E_1,E_2,\ldots\}$ конечно, то цепь называется кон
 \]
 Вектор $\vec{\rho}(0)$ называется начальным распределением цепи Маркова.
 
-\textbf{Теорема 1.1.}
+\textbf{Теорема 1.1.} $P(n) = P^n$.
+
+\textbf{Теорема 1.2.}
+$\displaystyle P^{(k+n)} = P^{(k)} P^{(n)}$.
+
+\textbf{Теорема 1.3.}
+Для произвольного набора $i_0<i_1<\dots<i_k$ ($k=2,3,\ldots$) и любых
+$E_{j_0},E_{j_1},\ldots,E_{j_k}$ верно соотношение
 \[
-	P(n) = P^n.
+	P(X_{i_k}=E_{j_k},\ldots,X_{i_1}=E_{j_1}\mid X_{i_0}=E_{j_0})
+	=
+	\prod_{m=1}^{k} p_{\,j_{m-1} j_m}^{\, (i_m-i_{m-1})}.
 \]
 
-Найдём
+\textbf{Задача 1.1.}
+Дана матрица переходных вероятностей
 \[
-	P(Y_1 = 1 \mid Y_{-1} = 2)
-	= \frac{P(Y_{-1} = 2,\, Y_1 = 1)}{P(Y_{-1} = 2)}.
+	P=
+	\begin{pmatrix}
+		0.5 & 0.1 & 0.4 \\
+		0.1 & 0.7 & 0.2 \\
+		0.4 & 0.3 & 0.3
+	\end{pmatrix},
+\]
+и начальное распределение
+\[
+	\vec\rho(0) = (0.5; 0.1; 0.4).
 \]
 
-\[
-	P(Y_{-1} = 2,\, Y_1 = 1)
-	= P(X_{-1} = 2,\, X_1 = 1)
-	= \frac{3}{8}\cdot \frac{3}{8} + \frac{1}{4}\cdot \frac{1}{4}
-	= \frac{3}{10},
-\]
-\[
-	P(X_{-1} = 2) + P(X_{-1} = 3)
-	= \frac{3}{8} + \frac{1}{4}.
-\]
+Найти:
+\begin{enumerate}
+	\item вероятность того, что в моменты времени $t=0,1,2,3$ состояния цепи Маркова будут соответственно $2,1,1,3$;
+	\item $\vec\rho(2)$.
+\end{enumerate}
 
-То есть процесс не является цепью Маркова.
+\textbf{Решение.}
 
-Заметим, что необходимые здесь значения $P(X_{-1}=2)$ и $P(X_{-1}=3)$
-следует найти из распределения вероятностей через один шаг.
-Непосредственно видно:
-\[
-	\vec{\rho}(1)=\vec{\rho}(0)P=\left(\tfrac{3}{8},\,\tfrac{3}{8},\,\tfrac{1}{4}\right).
-\]
-
-\textbf{Замечание 1.1.}
-Если матрица переходных вероятностей $\rho_X$
-цепи Маркова $\{X_n\}_{n=0}^{\infty}$ удовлетворяет условию
-$\rho_{21}=\rho_{31}=\alpha$, то последовательность с.~в.
-$\{Y_n\}_{n=0}^{\infty}$ будет цепью Маркова.
-
-Действительно, при всех $i_0,i_1,\dots,i_{n-1},i_n$ имеем
+1) Согласно теореме 1.3 имеем
 \begin{align*}
-	P(Y_n = 1 \mid Y_0 = i_0,\ldots,Y_{n-1}= i_{n-1})
-	 & = P(X_n = 1 \mid Y_0 = i_0,\ldots,Y_{n-1}= i_{n-1}) \\
-	 & = p_{11}                                            \\
-	 & = P(Y_n = 1 \mid Y_{n-1} = 1).
+	P(X_0=2,X_1=1,X_2=1,X_3=3)
+	 & = 0.1 \cdot 0.2 \cdot 0.5 \cdot 0.4 \\
+	 & = 0.004.
 \end{align*}
 
+2) По теореме 1.2 имеем
+\[
+	P(2) = P^{2},
+	\qquad
+	\vec\rho(2)=\vec\rho(0) P^{2}.
+\]
 
-\begin{align*}
-	 & P(Y_n = 2 \mid Y_0 = i_0,\ldots,Y_{n-1}=1)   \\
-	 & = P(X_n = 2 \mid Y_0 = i_0,\ldots,Y_{n-1}=1)
-	+ P(X_n = 3 \mid Y_0 = i_0,\ldots,Y_{n-1}=1)    \\
-	 & = P(X_n = 2 \mid X_{n-1}=1)
-	+ P(X_n = 3 \mid X_{n-1}=1)                     \\
-	 & = p_{12} + p_{13}
-	= 1 - p_{11}
-	= P(Y_n = 2 \mid Y_{n-1}=1).
-\end{align*}
+\[
+	P^{2} =
+	\begin{pmatrix}
+		0.43 & 0.23 & 0.34 \\
+		0.30 & 0.43 & 0.26 \\
+		0.38 & 0.31 & 0.31
+	\end{pmatrix},
+	\qquad
+	\vec\rho(0)=(0.5;\,0.1;\,0.4).
+\]
 
+\[
+	\vec\rho(2) = (0.397;\,0.283;\,0.320).
+\]
 
-\begin{align*}
-	P(Y_n = 1 \mid Y_0 = i_0,\ldots,Y_{n-1}=2)
-	 & = \frac{P(Y_0=i_0,\ldots,Y_{n-1}=2,\,Y_n=1)}
-	{P(Y_0=i_0,\ldots,Y_{n-1}=2)}.
-\end{align*}
+\textbf{Задача 1.2.}
 
+В феврале не бывает подряд двух солнечных дней.
+Если погода солнечная, то завтра она изменится: с равной вероятностью будет дождь или снег.
+Если сегодня снег или дождь, то завтра погода с вероятностью $1/2$ не изменится,
+при изменении погоды — в половине случаев будет солнечно.
+
+Сегодня снег. Найти:
+\begin{enumerate}
+	\item распределение вероятности погоды на завтра;
+	\item вероятность того, что снег будет идти завтра и послезавтра.
+\end{enumerate}
+
+Введём обозначения:
+$E_1$ — дождь,
+$E_2$ — солнце,
+$E_3$ — снег,
+$X_n$ — погода на $n$-й день.
 
