--- a/book.tex
+++ b/book.tex
@@ -15,7 +15,7 @@
 \usetikzlibrary{arrows.meta,positioning}
 \tikzset{lab/.style={font=\footnotesize, inner sep=1pt}}
 
-\usepackage[a4paper,top=2.54cm,bottom=2.54cm,left=3cm,right=1.5cm]{geometry}
+\usepackage[a4paper,top=2.54cm,bottom=2.54cm,left=3cm,right=1.5cm]{}
 
 \newtheorem{theorem}{Теорема}[section]
 \newtheorem{definition}{Определение}[section]
