--- a/book/book1.tex
+++ b/book/book1.tex
@@ -55,75 +55,60 @@ $S=\{E_1,E_2,\ldots\}$ конечно, то цепь называется кон
 \textbf{Теорема 1.1.} $P(n) = P^n$.
 
 \textbf{Теорема 1.2.}
-$\displaystyle P^{(k+n)} = P^{(k)} P^{(n)}$.
+$\vec{\rho}(k+n) = \vec{\rho}(k) P^n$.
 
 \textbf{Теорема 1.3.}
-Для произвольного набора $i_0<i_1<\dots<i_k$ ($k=2,3,\ldots$) и любых
+Для произвольного набора $i_0 < i_1 < \dots < i_k$ ($k = 2,3,\ldots$) и любых
 $E_{j_0},E_{j_1},\ldots,E_{j_k}$ верно соотношение
-\[
-	P(X_{i_k}=E_{j_k},\ldots,X_{i_1}=E_{j_1}\mid X_{i_0}=E_{j_0})
-	=
-	\prod_{m=1}^{k} p_{\,j_{m-1} j_m}^{\, (i_m-i_{m-1})}.
-\]
+$$
+	P(X_{i_0} = E_{j_0},\ldots,X_{i_k} = E_{j_k})
+	= \rho_{j_0}(i_0) \prod_{m=1}^{k} p_{j_{m-1} j_m}(i_m - i_{m-1}).
+$$
 
 \textbf{Задача 1.1.}
-Дана матрица переходных вероятностей
-\[
-	P=
+Даны матрица переходных вероятностей
+$$
+	P =
 	\begin{pmatrix}
 		0.5 & 0.1 & 0.4 \\
-		0.1 & 0.7 & 0.2 \\
+		0.2 & 0.6 & 0.2 \\
 		0.4 & 0.3 & 0.3
-	\end{pmatrix},
-\]
-и начальное распределение
-\[
-	\vec\rho(0) = (0.5; 0.1; 0.4).
-\]
+	\end{pmatrix}
+$$
+и начальное распределение $\vec{\rho}(0) = (0.5; 0.1; 0.4)$.
 
 Найти:
 \begin{enumerate}
-	\item вероятность того, что в моменты времени $t=0,1,2,3$ состояния цепи Маркова будут соответственно $2,1,1,3$;
-	\item $\vec\rho(2)$.
+	\item вероятность того, что в моменты времени $t = 0,1,2,3$
+	      состояниями цепи Маркова будут соответственно $2,1,1,3$;
+	\item $\vec{\rho}(2)$.
 \end{enumerate}
 
 \textbf{Решение.}
-
-1) Согласно теореме 1.3 имеем
-\begin{align*}
-	P(X_0=2,X_1=1,X_2=1,X_3=3)
-	 & = 0.1 \cdot 0.2 \cdot 0.5 \cdot 0.4 \\
-	 & = 0.004.
-\end{align*}
-
-2) По теореме 1.2 имеем
-\[
-	P(2) = P^{2},
-	\qquad
-	\vec\rho(2)=\vec\rho(0) P^{2}.
-\]
-
-\[
-	P^{2} =
-	\begin{pmatrix}
-		0.43 & 0.23 & 0.34 \\
-		0.30 & 0.43 & 0.26 \\
-		0.38 & 0.31 & 0.31
-	\end{pmatrix},
-	\qquad
-	\vec\rho(0)=(0.5;\,0.1;\,0.4).
-\]
-
-\[
-	\vec\rho(2) = (0.397;\,0.283;\,0.320).
-\]
+\begin{enumerate}
+	\item согласно теореме 1.3 имеем
+	      $$
+		      P(X_0 = 2, X_1 = 1, X_2 = 1, X_3 = 3)
+		      = 0.1 \cdot 0.2 \cdot 0.5 \cdot 0.4 = 0.004;
+	      $$
+	\item по теореме 1.2 имеем
+	      $$
+		      \vec{\rho}(2) = \vec{\rho}(0) P^2 =
+		      (0.5; 0.1; 0.4)
+		      \begin{pmatrix}
+			      0.43 & 0.23 & 0.34 \\
+			      0.3  & 0.44 & 0.26 \\
+			      0.36 & 0.31 & 0.31
+		      \end{pmatrix}
+		      = (0.397; 0.283; 0.32).
+	      $$
+\end{enumerate}
 
 \textbf{Задача 1.2.}
-
-В феврале не бывает подряд двух солнечных дней.
-Если погода солнечная, то завтра она изменится: с равной вероятностью будет дождь или снег.
-Если сегодня снег или дождь, то завтра погода с вероятностью $1/2$ не изменится,
-при изменении погоды — в половине случаев будет солнечно.
+В феврале не бывает подряд двух солнечных дней. Если погода солнечная,
+то завтра она изменится: с равной вероятностью будет дождь или снег.
+Если сегодня снег или дождь, то завтра она с вероятностью $1/2$ не изменится,
+при изменении погоды в половине случаев будет солнечно.
 
 Сегодня снег. Найти:
 \begin{enumerate}
@@ -131,9 +116,6 @@ $E_{j_0},E_{j_1},\ldots,E_{j_k}$ верно соотношение
 	\item вероятность того, что снег будет идти завтра и послезавтра.
 \end{enumerate}
 
-Введём обозначения:
-$E_1$ — дождь,
-$E_2$ — солнце,
-$E_3$ — снег,
-$X_n$ — погода на $n$-й день.
-
+\textbf{Решение.}
+Введем обозначения: $E_1$ --- дождь, $E_2$ --- солнечно, $E_3$ --- снег,
+$X_n$ --- погода на $n$-й день.
