--- a/tasks.tex
+++ b/tasks.tex
@@ -38,7 +38,7 @@
 \renewcommand{\epigraphflush}{flushleft}
 
 % Заголовок
-\title{Задачи по теории случайных процессов}
+\title{Задачи Лобузова}
 \date{2025}
 
 \begin{document}
@@ -48,25 +48,17 @@
 \tableofcontents
 \newpage
 
-\input{book/book1}
+\input{tasks/task1}
 \newpage
-\input{book/book2}
+\input{tasks/task2}
 \newpage
-\input{book/book3}
+\input{tasks/task3}
 \newpage
-\input{book/book4}
+\input{tasks/task4}
 \newpage
-\input{book/book5}
+\input{tasks/task5}
 \newpage
-\input{book/book6}
-\newpage
-\input{book/book7}
-\newpage
-\input{book/book8}
-\newpage
-\input{book/book9}
-\newpage
-\input{book/book10}
+\input{tasks/task6}
 \newpage
 
 \end{document}
