--- a/book/book1.tex
+++ b/book/book1.tex
@@ -119,3 +119,60 @@ $$
 \textbf{Решение.}
 Введем обозначения: $E_1$ --- дождь, $E_2$ --- солнечно, $E_3$ --- снег,
 $X_n$ --- погода на $n$-й день.
+
+Имеем:
+$$
+	P =
+	\begin{pmatrix}
+		\frac{1}{2} & \frac{1}{4} & \frac{1}{4} \\
+		\frac{1}{2} & 0           & \frac{1}{2} \\
+		\frac{1}{4} & \frac{1}{4} & \frac{1}{2}
+	\end{pmatrix};
+$$
+
+1) $\vec{\rho}(1) = \vec{\rho}(0) P = (0,0,1) P = \left(\frac{1}{4}, \frac{1}{4}, \frac{1}{2}\right)$;
+
+2) $P(X_0 = E_3, X_1 = E_3, X_2 = E_3)
+	= 1 \cdot \frac{1}{2} \cdot \frac{1}{2} = \frac{1}{4}$.
+
+\textbf{Задача 1.3.}
+Пусть $X_n$ — марковская цепь с 3-мя состояниями $\{1,2,3\}$.
+Положим
+$$
+	Y_n =
+	\begin{cases}
+		1, & X_n = 1;   \\
+		2, & X_n \ne 1.
+	\end{cases}
+$$
+
+Будет ли последовательность $Y_n$ марковской цепью?
+
+Решение
+
+Вообще говоря — нет.
+Рассмотрим для примера матрицу переходных вероятностей
+$$
+	P =
+	\begin{pmatrix}
+		\frac{1}{2} & \frac{1}{3} & \frac{1}{6} \\
+		\frac{1}{3} & \frac{1}{3} & \frac{1}{3} \\
+		\frac{1}{4} & \frac{1}{2} & \frac{1}{4}
+	\end{pmatrix};
+$$
+$\vec{\rho}(0) = \left(\frac{3}{8}, \frac{3}{8}, \frac{1}{4}\right)$.
+
+Проверим условие Маркова:
+$$
+	P(Y_2 = 1 \mid Y_0 = 1, Y_1 = 2) = P(Y_2 = 1 \mid Y_1 = 2).
+$$
+Имеем
+\begin{align*}
+	P(Y_2 = 1 \mid Y_0 = 1, Y_1 = 2)
+	 & = \frac{P(Y_2 = 1, Y_0 = 1, Y_1 = 2)}{P(Y_0 = 1, Y_1 = 2)}                   \\
+	 & = \frac{P(X_0 = 1, X_1 = 2, X_2 = 1) + P(X_0 = 1, X_1 = 3, X_2 = 1)}
+	{P(X_0 = 1, X_1 = 2) + P(X_0 = 1, X_1 = 3)}                                     \\
+	 & = \frac{P(X_0 = 1)\frac{1}{3}\frac{1}{3} + P(X_0 = 1)\frac{1}{6}\frac{1}{4}}
+	{P(X_0 = 1)\frac{1}{3} + P(X_0 = 1)\frac{1}{6}}                                 \\
+	 & = \frac{11}{36}.
+\end{align*}
