--- a/tasks/task1.tex
+++ b/tasks/task1.tex
@@ -28,6 +28,15 @@ $K(\tau)=1-|\tau|$, $T=1$
 На $\left[0,1\right]$: $K(\tau)=1-\tau$.
 
 $$
+	D_0=\frac{1}{1} \left[\int_{0}^{1} (1-\tau) d\tau\right]=\left[\tau-\frac{\tau^2}{2}\right]_0^1=\frac{1}{2}
+$$
+
+$$
+	D_k=\frac{2}{1} \left[\int_{0}^{1} (1-\tau)\cos(\frac{k \pi \tau}{1}) d\tau\right]=
+	2\left(\left[\int_{0}^{1}\cos(k \pi \tau) d\tau\right]-\left[\int_{0}^{1} \tau\cos(k \pi \tau) d\tau\right]\right)
+$$
+
+$$
 	I_1=\int_{0}^{1}\cos(k \pi \tau) d\tau=\left[\frac{sin(k \pi \tau)}{k\pi}\right]_0^1=0
 $$
 
@@ -66,7 +75,7 @@ $$
 $K(\tau)=1-\tau^2$, $T=1$
 
 $$
-	.
+	В
 $$
 
 \subsubsection*{Задача 9.3}
