--- a/tasks/task1.tex
+++ b/tasks/task1.tex
@@ -74,8 +74,46 @@ $$
 \subsubsection*{Задача 9.2}
 $K(\tau)=1-\tau^2$, $T=1$
 
+На $\left[0,1\right]$: $K(\tau)=1-\tau^2$.
+
 $$
-	В
+	D_0=\frac{1}{1} \left[\int_{0}^{1} (1-\tau^2) d\tau\right]=\left[\tau-\frac{\tau^3}{3}\right]_0^1=\frac{1}{3}
+$$
+
+$$
+	D_k=\frac{2}{1} \left[\int_{0}^{1} (1-\tau^2)\cos(\frac{k \pi \tau}{1}) d\tau\right]=
+	2\left(\left[\int_{0}^{1}\cos(k \pi \tau) d\tau\right]-\left[\int_{0}^{1} \tau^2\cos(k \pi \tau) d\tau\right]\right)
+$$
+
+$$
+	I_1=\int_{0}^{1}\cos(k \pi \tau) d\tau=\left[\frac{sin(k \pi \tau)}{k\pi}\right]_0^1=0
+$$
+
+$$
+	\begin{aligned}
+		I_2 & = \int_{0}^{1} \tau^2 \cos(k \pi \tau) \, d\tau
+		= \left[ \tau^2 \frac{\sin(k \pi \tau)}{k \pi} \right]_0^1 - \int_{0}^{1} \frac{\sin(k \pi \tau)}{k \pi} 2\tau \, d\tau
+		\\ &= 0 - \left(\left[(2\tau)\left(-\frac{\cos(k \pi \tau)}{(k \pi)^2}\right)\right]_0^1 - \int_{0}^{1} 2 \frac{\cos(k \pi \tau)}{(k \pi)^2} d\tau \right)
+		\\ &= \frac{2 \cos(k \pi )}{(k \pi)^2} + \left(-\left[\frac{2 \sin(k \pi \tau)}{(k \pi)^3}\right]_0^1\right)
+		= \frac{2 \cos(k \pi )}{(k \pi)^2} - 0
+		= \frac{2 \cos(k \pi )}{(k \pi)^2}
+		= \frac{2 (-1)^k}{(k \pi)^2}
+	\end{aligned}
+$$
+
+$$
+	D_k =2(I_1-I_2)
+	=2(0-(-\frac{2 (-1)^k}{(k \pi)^2}))
+	=-\frac{4 (-1)^k}{(k \pi)^2}
+$$
+
+$$
+	\begin{aligned}
+		K(\tau) & =D_0+\sum_{k=1}^{\infty} D_k \cos\left(\frac{k \pi \tau}{1}\right)
+		=\frac{1}{2} + \sum_{k=1}^{\infty} \frac{2(1-(-1)^k)}{k^2\pi^2} \cos(k \pi \tau)
+		\\ & = \frac{1}{2} + \sum_{m=0}^{\infty} \frac{4}{(2m+1)^2\pi^2} \cos((2m+1) \pi \tau)
+		= \frac{1}{2} + \frac{4}{\pi^2} \sum_{m=0}^{\infty} \frac{\cos((2m+1) \pi \tau)}{(2m+1)^2}
+	\end{aligned}
 $$
 
 \subsubsection*{Задача 9.3}
@@ -83,6 +121,3 @@ $K(\tau)=2-3|\tau|$, $T=1$
 
 \subsubsection*{Задача 9.4}
 $K(\tau)=2-3|\tau|$, $T=2$
-
-\subsubsection*{Задача 9.5}
-$K(\tau)=3-|\tau|$, $T=5$
