--- a/tasks/task1.tex
+++ b/tasks/task1.tex
@@ -208,9 +208,9 @@ $$
 
 $$
 	\begin{aligned}
-		K(\tau) & =D_0+\sum_{k=1}^{\infty} D_k \cos\left(\frac{k \pi \tau}{1}\right)
-		=-1 + \sum_{k=1}^{\infty} \frac{12(1-(-1)^k)}{k^2\pi^2} \cos(k \pi \tau)
-		\\ & = -1 + \sum_{m=0}^{\infty} \frac{24}{(2m+1)^2\pi^2} \cos((2m+1) \pi \tau)
-		= -1 + \frac{24}{\pi^2} \sum_{m=0}^{\infty} \frac{\cos((2m+1) \pi \tau)}{(2m+1)^2}
+		K(\tau) & =D_0+\sum_{k=1}^{\infty} D_k \cos\left(\frac{k \pi \tau}{2}\right)
+		=-1 + \sum_{k=1}^{\infty} \frac{12(1-(-1)^k)}{k^2\pi^2} \cos(\frac{k \pi \tau}{2})
+		\\ & = -1 + \sum_{m=0}^{\infty} \frac{24}{(2m+1)^2\pi^2} \cos(\frac{(2m+1) \pi \tau}{2})
+		= -1 + \frac{24}{\pi^2} \sum_{m=0}^{\infty} \frac{\cos(\frac{(2m+1) \pi \tau}{2})}{(2m+1)^2}
 	\end{aligned}
 $$
