--- a/tasks/form.tex
+++ b/tasks/form.tex
@@ -8,3 +8,12 @@ $$
 $$
 	cos(\pi k) = (-1)^k
 $$
+
+$$
+	(1-(-1)^k) f(x)
+	=
+	\begin{cases}
+		2 f(x), & k = 2m+1, \\
+		0,      & k = 2m.
+	\end{cases}
+$$
