--- a/tasks/task2.tex
+++ b/tasks/task2.tex
@@ -1,1 +1,43 @@
-1
+\subsection*{Корреляционная функция}
+
+\subsubsection*{Общее решение}
+
+Корреляционная функция $K_x(t,s)$
+
+$$
+	Y_t=L_t[X_t]
+$$
+
+$$
+	K_Y(t,s)=L_t[\overline{L}_s[K_x(t,s)]]
+$$
+
+\subsubsection*{Задача 8.1}
+
+$K_x(t,s)=e^{-2i(t-s)}$, $Y_t=it \frac{dX_t}{dt}+e^{it}X_t$
+
+$$
+	L_t=it\frac{\partial}{\partial t}[\cdot] + e^{it}[\cdot]
+$$
+
+$$
+	\overline{L}_s=-is\frac{\partial}{\partial s}[\cdot] + e^{-is}[\cdot]
+$$
+
+$$
+	\begin{aligned}
+		\overline{L}_s[K_x(t,s)] & =-is\frac{\partial}{\partial s}K_x(t,s) + e^{-is}K_x(t,s)
+		=-is\frac{\partial}{\partial s}(e^{-2i(t-s)}) + e^{-is}(e^{-2i(t-s)})
+		\\ & =-is \cdot 2i e^{-2i(t-s)} + e^{-is+(-2it+2is)}
+		=2s e^{-2i(t-s)} +e^{-2it+is}
+	\end{aligned}
+$$
+
+$$
+	\begin{aligned}
+		L_t[\overline{L}_s[K_x(t,s)]] & = it\frac{\partial}{\partial t}\overline{L}_s[K_x(t,s)] + e^{it}\overline{L}_s[K_x(t,s)]
+		\\ & = it\frac{\partial}{\partial t}(2s e^{-2i(t-s)} +e^{-2it+is}) + e^{it}(2s e^{-2i(t-s)} +e^{-2it+is})
+		\\ & = it(2s \cdot -2i \cdot e^{-2i(t-s)} - 2i\cdot e^{-2it +is}) + 2s\cdot e^{it-2it+2is} + e ^{it -2it +is}
+		\\ & = 4st \cdot e^{-2it+2is} + 2t \cdot e^{-2it+is} + 2s \cdot e^{-it+2is} + e^{-it+is}.
+	\end{aligned}
+$$
