--- a/exam_questions.tex
+++ b/exam_questions.tex
@@ -1,1 +1,114 @@
-\section{Вопросы по экзамену}
+\documentclass[a4paper,12pt]{article}
+
+% Пакеты
+\usepackage[utf8]{inputenc}
+\usepackage[T2A]{fontenc}
+\usepackage[russian]{babel}
+\usepackage{graphicx}
+
+\usepackage{amsmath,amssymb,amsthm}
+\usepackage{multirow}
+\usepackage{diagbox}
+\usepackage{tabularx}
+\usepackage{hyperref}
+\usepackage{tikz} 
+\usetikzlibrary{arrows.meta,positioning}
+\tikzset{lab/.style={font=\footnotesize, inner sep=1pt}}
+
+\usepackage[a4paper,top=2.54cm,bottom=2.54cm,left=2.5cm,right=1.5cm]{geometry}
+
+\newtheorem{theorem}{Теорема}[section]
+\newtheorem{definition}{Определение}[section]
+\newtheorem{example}{Пример}[section]
+
+\newcommand{\term}[1]{\textit{#1}\textnormal{}} 
+
+\usepackage{epigraph}
+
+\usepackage[none]{hyphenat}
+\pretolerance=10000
+\tolerance=2000
+\emergencystretch=3em
+\hyphenpenalty=10000
+\exhyphenpenalty=10000
+
+
+\setlength{\epigraphwidth}{0.6\textwidth}
+\setlength{\epigraphrule}{0pt}          
+\renewcommand{\epigraphflush}{flushleft}
+
+\newenvironment{condition}{\par\textbf{Условие.}}{\par}
+
+% Заголовок
+\title{Вопросы к экзамену. Лобузов}
+\date{2025}
+
+\begin{document}
+
+\maketitle
+
+\tableofcontents
+\newpage
+
+\input{exam_questions/eq-1.tex}
+% \newpage
+\input{exam_questions/eq-2.tex}
+% \newpage
+\input{exam_questions/eq-3.tex}
+% \newpage
+\input{exam_questions/eq-4.tex}
+% \newpage
+\input{exam_questions/eq-5.tex}
+% \newpage
+\input{exam_questions/eq-6.tex}
+% \newpage
+\input{exam_questions/eq-7.tex}
+% \newpage
+\input{exam_questions/eq-8.tex}
+% \newpage
+\input{exam_questions/eq-9.tex}
+% \newpage
+\input{exam_questions/eq-10.tex}
+% \newpage
+\input{exam_questions/eq-11.tex}
+% \newpage
+\input{exam_questions/eq-12.tex}
+% \newpage
+\input{exam_questions/eq-13.tex}
+% \newpage
+\input{exam_questions/eq-14.tex}
+% \newpage
+\input{exam_questions/eq-15.tex}
+% \newpage
+\input{exam_questions/eq-16.tex}
+% \newpage
+\input{exam_questions/eq-17.tex}
+% \newpage
+\input{exam_questions/eq-18.tex}
+% \newpage
+\input{exam_questions/eq-19.tex}
+% \newpage
+\input{exam_questions/eq-20.tex}
+% \newpage
+\input{exam_questions/eq-21.tex}
+% \newpage
+\input{exam_questions/eq-22.tex}
+% \newpage
+\input{exam_questions/eq-23.tex}
+% \newpage
+\input{exam_questions/eq-24.tex}
+% \newpage
+\input{exam_questions/eq-25.tex}
+% \newpage
+\input{exam_questions/eq-26.tex}
+% \newpage
+\input{exam_questions/eq-27.tex}
+% \newpage
+\input{exam_questions/eq-28.tex}
+% \newpage
+\input{exam_questions/eq-29.tex}
+% \newpage
+\input{exam_questions/eq-30.tex}
+
+\end{document}
+
