--- a/main.tex
+++ b/main.tex
@@ -51,11 +51,11 @@
 \newpage
 \input{knowledge_graph}
 
-\newpage
-\input{exam_questions}
+% \newpage
+% \input{exam_questions}
 
-\newpage
-\input{exam_problems}
+% \newpage
+% \input{exam_problems}
 
 \newpage
 \input{exam_consultation}
