--- a/tasks/task2.tex
+++ b/tasks/task2.tex
@@ -133,3 +133,182 @@ $$
 		\right)
 	\end{aligned}
 $$
+
+
+\subsubsection*{Задача 8.3}
+
+$K_x(t,s)=e^{2i(t-s)}=e^{2it-2is}$, $Y_t = \int_{0}^{t} i \tau X_\tau d\tau$
+
+$$
+	L_t[\cdot] = \int_{0}^{t} i \tau [\cdot] d\tau
+$$
+
+$$
+	\overline{L}_s[\cdot] = \int_{0}^{s} -i \sigma [\cdot] d\sigma
+$$
+
+$$
+	K_x(t,s)=K_x(\tau,\sigma)=e^{2i\tau-2i\sigma}
+$$
+
+$$
+	\begin{aligned}
+		L_t[K_x(\tau,\sigma)] & = \int_{0}^{t} i\,\tau\,K_x(\tau,\sigma)\,d\tau
+		= i e^{-2i\sigma}\int_{0}^{t} \tau e^{2i\tau}\,d\tau
+		\\ & = i e^{-2i\sigma}
+		\left(
+		\left[
+			\tau\frac{1}{2i}e^{2i\tau}
+			\right]_0^t
+		-
+		\frac{1}{2i} \int_{0}^{t} e^{2i\tau} \, d\tau
+		\right)
+		\\ & = i e^{-2i\sigma}
+		\left(
+		\frac{t}{2i} e^{2it}
+		-
+		\frac{1}{2i}
+		\left[
+			\frac{1}{2i} e^{2i\tau}
+			\right]_0^t
+		\right)
+		\\ & = i e^{-2i\sigma}
+		\left(
+		\frac{t}{2i} e^{2it}
+		+
+		\frac{1}{4}
+		\left(
+		e^{2it}
+		-1
+		\right)
+		\right)
+		\\ & = i e^{-2i\sigma}
+		\left(
+		e^{2it}
+		\left(
+		\frac{t}{2i}+\frac{1}{4}
+		\right)
+		-\frac{1}{4}
+		\right)
+	\end{aligned}
+$$
+
+$$
+	\begin{aligned}
+	\overline{L}_s[L_t[K_x(\tau,\sigma)]] & =
+	\int_{0}^{s} -i \sigma \, L_t[K_x(\tau,\sigma)] \, d\sigma
+	= \int_{0}^{s} -i \sigma \, i e^{-2i\sigma}
+	\left(
+	e^{2it}
+	\left(
+	\frac{t}{2i}+\frac{1}{4}
+	\right)
+	-\frac{1}{4}
+	\right) \, d\sigma
+	\\ & =
+	\left(
+	e^{2it}
+	\left(
+	\frac{t}{2i}+\frac{1}{4}
+	\right)
+	-\frac{1}{4}
+	\right)
+	\int_{0}^{s} \sigma e^{-2i\sigma} \, d\sigma
+	\\ & =
+	\left(
+	e^{2it}
+	\left(
+	\frac{t}{2i}+\frac{1}{4}
+	\right)
+	-\frac{1}{4}
+	\right)
+	\left(
+	\left[
+		\sigma \frac{1}{-2i} e^{-2i\sigma}
+		\right]_0^s
+	+ \frac{1}{2i}
+	\int_{0}^{s} e^{-2i\sigma} \, d\sigma
+	\right)
+	\\ & =
+	\left(
+	e^{2it}
+	\left(
+	\frac{t}{2i}+\frac{1}{4}
+	\right)
+	-\frac{1}{4}
+	\right)
+	\left(
+	\left(
+	-\frac{s}{2i} e^{-2is}
+	\right)
+	+ \frac{1}{2i}
+	\left[
+		\frac{1}{-2i} e^{-2i\sigma}
+		\right]_0^s
+	\right)
+	\\ & =
+	\left(
+	e^{2it}
+	\left(
+	\frac{t}{2i}+\frac{1}{4}
+	\right)
+	-\frac{1}{4}
+	\right)
+	\left(
+	\left(
+		-\frac{s}{2i} e^{-2is}
+		\right)
+	+ \frac{1}{4}
+	\left(
+		e^{-2is}
+		-1
+		\right)
+	\right)
+	\\ & =
+	\left(
+	e^{2it}
+	\left(
+	\frac{t}{2i}+\frac{1}{4}
+	\right)
+	-\frac{1}{4}
+	\right)
+	\left(
+	e^{-2is}
+	\left(
+	-\frac{s}{2i}
+	+ \frac{1}{4}
+	\right)
+	-\frac{1}{4}
+	\right)
+	\\ & =
+	\left(
+	e^{2it}
+	\left(
+	-\frac{t}{2}+\frac{1}{4}
+	\right)
+	-\frac{1}{4}
+	\right)
+	\left(
+	e^{-2is}
+	\left(
+	\frac{s}{2}
+	+ \frac{1}{4}
+	\right)
+	-\frac{1}{4}
+	\right)
+	\\ & = \frac{1}{16}
+	\left(
+	e^{2it}(-2t+1)-1
+	\right)
+	\left(
+	e^{-2is} (2s+1)-1
+	\right)
+	\\ & =
+	\frac{1}{16}
+	\left(
+	e^{2it-2is}(-2t+1)(2s+1)
+	-e^{2it}(-2t+1)
+	-e^{-2is}(2s+1)
+	+1
+	\right)
+$$
