--- a/exam_problems/ep-3.tex
+++ b/exam_problems/ep-3.tex
@@ -128,7 +128,7 @@ $$
 
 \begin{conclusion}
 	$$
-		K_Y(t,s) =18ts e^{it-is} - 6te^{it-2is} - 6s e^{2it-is} + 2 e^{2it-2is}
+		K_Y(t,s) = 18ts e^{it-is} - 6te^{it-2is} - 6s e^{2it-is} + 2 e^{2it-2is}
 	$$
 \end{conclusion}
 
@@ -148,10 +148,35 @@ $$
 
 \begin{solution}
 
+	$K_X(t,s)=$,
+	$Y_t=$
+
+
+	$$
+		L_t[\cdot] =
+	$$
+
+	$$
+		\overline{L}_s[\cdot] =
+	$$
+
+	$$
+		\begin{aligned}
+			\overline{L}_s[K_x(t,s)] & =
+		\end{aligned}
+	$$
+
+	$$
+		\begin{aligned}
+			L_t[\overline{L}_s[K_x(t,s)]] & =
+		\end{aligned}
+	$$
 \end{solution}
 
 \begin{conclusion}
-
+	$$
+		K_Y(t,s) =
+	$$
 \end{conclusion}
 
 \end{problem}
@@ -171,10 +196,35 @@ $$
 
 \begin{solution}
 
+	$K_X(t,s)=$,
+	$Y_t=$
+
+
+	$$
+		L_t[\cdot] =
+	$$
+
+	$$
+		\overline{L}_s[\cdot] =
+	$$
+
+	$$
+		\begin{aligned}
+			\overline{L}_s[K_x(t,s)] & =
+		\end{aligned}
+	$$
+
+	$$
+		\begin{aligned}
+			L_t[\overline{L}_s[K_x(t,s)]] & =
+		\end{aligned}
+	$$
 \end{solution}
 
 \begin{conclusion}
-
+	$$
+		K_Y(t,s) =
+	$$
 \end{conclusion}
 
 \end{problem}
@@ -194,10 +244,35 @@ $$
 
 \begin{solution}
 
+	$K_X(t,s)=$,
+	$Y_t=$
+
+
+	$$
+		L_t[\cdot] =
+	$$
+
+	$$
+		\overline{L}_s[\cdot] =
+	$$
+
+	$$
+		\begin{aligned}
+			\overline{L}_s[K_x(t,s)] & =
+		\end{aligned}
+	$$
+
+	$$
+		\begin{aligned}
+			L_t[\overline{L}_s[K_x(t,s)]] & =
+		\end{aligned}
+	$$
 \end{solution}
 
 \begin{conclusion}
-
+	$$
+		K_Y(t,s) =
+	$$
 \end{conclusion}
 
 \end{problem}
@@ -217,10 +292,35 @@ $$
 
 \begin{solution}
 
+	$K_X(t,s)=$,
+	$Y_t=$
+
+
+	$$
+		L_t[\cdot] =
+	$$
+
+	$$
+		\overline{L}_s[\cdot] =
+	$$
+
+	$$
+		\begin{aligned}
+			\overline{L}_s[K_x(t,s)] & =
+		\end{aligned}
+	$$
+
+	$$
+		\begin{aligned}
+			L_t[\overline{L}_s[K_x(t,s)]] & =
+		\end{aligned}
+	$$
 \end{solution}
 
 \begin{conclusion}
-
+	$$
+		K_Y(t,s) =
+	$$
 \end{conclusion}
 
 \end{problem}
@@ -240,10 +340,35 @@ $$
 
 \begin{solution}
 
+	$K_X(t,s)=$,
+	$Y_t=$
+
+
+	$$
+		L_t[\cdot] =
+	$$
+
+	$$
+		\overline{L}_s[\cdot] =
+	$$
+
+	$$
+		\begin{aligned}
+			\overline{L}_s[K_x(t,s)] & =
+		\end{aligned}
+	$$
+
+	$$
+		\begin{aligned}
+			L_t[\overline{L}_s[K_x(t,s)]] & =
+		\end{aligned}
+	$$
 \end{solution}
 
 \begin{conclusion}
-
+	$$
+		K_Y(t,s) =
+	$$
 \end{conclusion}
 
 \end{problem}
